--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@
     text-align: center;
     cursor: pointer;
     user-select: none;
+    color: purple;
   }
   
   .board:hover {
@@ -118,68 +119,4 @@
     background-color: var(--button-active-background);
   }
   
-  /* FOOTER */
-  
-  .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    width: 100%;
-    padding: 10px;
-    font-size: 20px;
-  }
-  
-  .fa-github {
-    color: var(--font-color);
-    font-size: 24px;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .fa-github:hover {
-    transform: rotate(360deg) scale(1.2);
-  }
-  
-  /* MEDIA QUERIES */
-  
-  @media (max-width: 660px) {
-    .title {
-      font-size: 60px;
-    }
-  
-    .message {
-      font-size: 40px;
-    }
-  
-    .restart-button {
-      font-size: 40px;
-    }
-  
-    .gameboard {
-      width: 304px;
-      height: 304px;
-    }
-  
-    .field {
-      width: 100px;
-      height: 100px;
-      font-size: 70px;
-    }
-  }
-  
-  @media (max-width: 420px) {
-    .title {
-      font-size: 50px;
-    }
-  
-    .message {
-      font-size: 36px;
-    }
-  
-    .restart-button {
-      font-size: 36px;
-    }
-  }
+
